--- a/_posts/2019-07-02-the-us-narrative-today.html
+++ b/_posts/2019-07-02-the-us-narrative-today.html
@@ -2575,107 +2575,107 @@ stories:
   domain: http://www.lampasasdispatchrecord.com/
   link: https://www.lampasasdispatchrecord.com/content/house-blaze-may-be-connected-string-past-fires-0
 images:
-- name: white-house-lawn-white-house-window-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-atari-asteroids.jpg
-- name: stories-copper-servers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-copper-servers.jpg
-- name: meadowbutterfly-meadow-butterfly-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-dark-dali.jpg
-- name: dc-statue-dcstatue-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-atari-missle.jpg
-- name: downtown-trucksilo-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-neo-instinct.jpg
-- name: school-clouds-church-clouds-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-mucha-mult.jpg
-- name: christianity-christianity-under-construction-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-yellow-paper.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-dark-soul.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-dark-soul.png
-- name: aws-s3-stories-new-72-124-800-500-0-max-0--1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-72-124-800-500-0-max-0--1--1.jpg
-- name: razorcliff-razorcliff-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-colorful-blocks.jpg
-- name: white-house-whitehouse-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-spagetti-accident.jpg
-- name: beach-rocks-beach-rocks-currents-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-constitution.jpg
-- name: nazi-invasion-IMG_7072.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_7072.jpg
-- name: fence-fence-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-rainbow-festival.jpg
-- name: birdhouse-birdhouse-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-gan-vogh.jpg
-- name: curtain-curtain-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-wols.jpg
-- name: rockingchair-rockingchair-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-cinnamon-rolls.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-marcel-duchamp.jpg
-- name: store-on-corner-oldcabin-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-light-dali.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-jap-wav-pr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-jap-wav-pr.jpg
-- name: aws-s3-square-file-00-00-00-00-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-file-00-00-00-00-square.jpg
-- name: old-cabin-oldcabin-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-hot-spicy.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-alien-goggles.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-alien-goggles.JPG
-- name: blossombar-dark-soul-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-dark-soul-file-00-00-00-00.jpg
-- name: ellis-island-ellis-island-room.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room.jpg
-- name: trucksilo-trucksilo-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-crunch-paper.jpg
-- name: abandonedbuildings_sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_sunday.jpg
-- name: abe-lincoln-one-rainbow-festival-file-00-00-15-87.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-rainbow-festival-file-00-00-15-87.jpg
-- name: flower-barbed-wire-flower-barbed-wire-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-propaganda-leaflets.jpg
-- name: mosaic-face-mosaic-face-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-deep-connections.jpg
-- name: locked-up-steam-lock-up-steam-horiz-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-horiz-circuit.jpg
-- name: white-house-lawn-white-house-lawn-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-purple-pond.jpg
-- name: supreme-court-supremecourt-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-light-dali.jpg
-- name: power-lines-power-lines-empty-space-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-yellow-paper.jpg
-- name: server-cloud-server-racks-clouds-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-dali-two.jpg
-- name: mistywoods-babyfoot-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-smoking-cigarette.jpg
-- name: amusement-park-amusement-park-2-jap-wav-pr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-jap-wav-pr.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-rainbow-festival.jpg
-- name: trucksilo-trucksilo-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-blue-brush.jpg
-- name: berlinwall2-berlinwall-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-emily-carr.jpg
-- name: gypsy-wagon-gypsywagon-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-purple-storm.jpg
-- name: dc-statue-dcstatue-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-dark-soul.jpg
-- name: status-berlin-status-berlin-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-blue-granite.jpg
-- name: berlinwall-DSC-0084-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-colorful-dream.jpg
-- name: death-valley-death-valley-national-park-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-sand-paper.jpg
-- name: amusement-park-amusement-park-2-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-kand-two.jpg
-- name: window-window-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-atari-missle.jpg
-- name: catacombs-catacombs-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-pablo-blue.jpg
-- name: aws-s3-stories-catacombs-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-catacombs-copper-circuit-2.jpg
-- name: status-berlin-status-berlin-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-clean-view.jpg
-- name: dragon-desert-desert-dragon-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-dark-soul.jpg
+- name: gypsy-wagon-gypsywagon-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-ww2-color.jpg
+- name: fence-mexico-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-oily-mcoilface.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-ww2-dresden.jpg
+- name: abandonedbuildings_clean_view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_clean_view.jpg
+- name: beach-rocks-beach-rocks-currents-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-blue-circuit-4.jpg
+- name: subway-subway-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-spagetti-accident.jpg
+- name: dc-statue-dcstatue-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-cinnamon-rolls.jpg
+- name: rockingchair-rockingchair-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-colored-circuits.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-plentiful.jpg
+- name: curtain-curtain-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-ww2-color.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-creativity.jpg
+- name: castle-wall-DSC-0067-kandinsky-bv.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-kandinsky-bv.JPG
+- name: old-granary-field-oldhouse-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-yellow-paper.jpg
+- name: scream-IMG_E3643.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-IMG_E3643.jpg
+- name: beach-clouds-lifeguard-beachclouds-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-satan-red.jpg
+- name: legal-statue-legalstatue-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-satan-red.jpg
+- name: berlinwall2-berlinwall-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-colored-circuits.jpg
+- name: christianity-christianity-under-construction-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-bright-sand.jpg
+- name: store-on-corner-store-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-sand-paper.jpg
+- name: cargo-ship-cargo-ship-on-sea-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-light-dali.jpg
+- name: oldcabin-oldcabin-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-really-hot.jpg
+- name: store-on-corner-oldcabin-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-plentiful.jpg
+- name: ellis-island-ellisisland-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-light-dali.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-far-away.jpg
+- name: copper-circuit-IMG_6441.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-IMG_6441.jpg
+- name: oldcabin-store-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-mucha-mult.jpg
+- name: abe-lincoln-one-purp-paper-file-00-00-15-87.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-purp-paper-file-00-00-15-87.jpg
+- name: store-on-corner-store-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-mucha-mult.jpg
+- name: sand-hand-sand-hand-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-umberto-bocc.jpg
+- name: locked-up-steam-lock-up-steam-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-blue-circuit-5.jpg
+- name: liberty-back-statue-liberty-back-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-wols.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-atari-missle.jpg
+- name: san-francisco-street-view-san-francisco-street-view-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-purp-paper.jpg
+- name: scream-DSC_0002.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-DSC_0002.jpg
+- name: old-house-oldhouse-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-matrix.jpg
+- name: blossombar-blue-brush-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-blue-brush-file-00-00-50-62.jpg
+- name: old-granary-field-oldhouse-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-hot-spicy.jpg
+- name: walled-garden-walled-garden-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-neo-instinct.jpg
+- name: san-francisco-street-view-san-francisco-street-view-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-propaganda-leaflets.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-dali-two.jpg
+- name: nyc-flag-nycflag-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-marcel-duchamp.jpg
+- name: art-museum-art-museum-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-gan-vogh.jpg
+- name: aws-s3-stories-new-digital-bits-capital-dc-flag-side-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-digital-bits-capital-dc-flag-side-view.jpg
+- name: border-crossing-bordercrossing-wols.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-wols.png
+- name: catacombs-catacombs-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-umberto-bocc.jpg
+- name: containership-containership-horiz-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-horiz-circuit.jpg
+- name: castle-wall-DSC-0067-deep-connections.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-deep-connections.JPG
+- name: store-on-corner-store-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-atari-asteroids.jpg
+- name: window-window-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-dry-skin.jpg
+- name: windowmountain-window-mountain-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-gred-mash.jpg
+- name: windowmountain-window-mountain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain.jpg
 ---
 Freshman Ellis Ready To Make Bold Impact.&nbsp;Elisabeth Moss's Fashion Exception.&nbsp;Vehicle Crash Reported On Watkins Road.&nbsp;Coleman Says He Expects Tribe To Make The Playoffs This Fall.&nbsp;Chair Announces Interim Appointment At Central Vermont Chamber.&nbsp;City Adopts Changes To Utility Collection Policy.&nbsp;Hosparus In Need Of Care Blankets.&nbsp;House Committee Files Lawsuit Over Trump Tax Returns.&nbsp;
